[package]
name = "openapiv3-visit"
description = "visitor for the openapiv3 crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aatifsyed/openapiv3-visit"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "1.0.2"

[dev-dependencies]
openapiv3 = "1.0.2"
serde_yaml = "0.9.19"
